--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon.ico">
 
-<head>
-  <meta charset="utf-8" />
-  <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
+    <meta name="theme-color" content="#000000" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  <meta name="theme-color" content="#000000" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Using Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
 
-  <!-- Using Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
+    <!-- Using Local Font -->
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
 
-  <!-- Using Local Font -->
-  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
+    <!-- Css simplebar -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.3.9/simplebar.min.css" />
 
-  <!-- Css simplebar -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.3.9/simplebar.min.css" />
-  
 
-  <title>Kryptonite</title>
-  <meta name="description"
-    content="Kryptonite est une application de gestion des cocktails." />
-  <meta name="keywords" content="react,material,kit,application,Kryptonite" />
-  <meta name="author" content="Deborah PALMA, Kastriot SAHITI" />
-</head>
+    <title>Kryptonite</title>
+    <meta name="description" content="Kryptonite est une application d'assistance à la correction des rendus de programmation" />
+    <meta name="keywords" content="react,material,kit,application,Kryptonite" />
+    <meta name="author" content="Kastriot SAHITI" />
+  </head>
 
-<body>
-  <noscript>Vous avez besoin de javascripts pour accéder à cette application.</noscript>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <noscript>Vous avez besoin de javascripts pour accéder à cette application.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
